--- a/EditPhoto/app/src/main/res/layout/fragment_filter.xml
+++ b/EditPhoto/app/src/main/res/layout/fragment_filter.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootFilter"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/controller">
 
-        <FilterView
+        <com.hoanganhtuan95ptit.editphoto.fillter.FilterView
             android:id="@+id/filterView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
