--- a/app/src/main/res/layout/colors.xml
+++ b/app/src/main/res/layout/colors.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/_24sdp"
     android:layout_height="@dimen/_24sdp"
     android:layout_margin="4dp"
     android:orientation="vertical">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <ImageView
         android:id="@+id/circle_colors"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:civ_border_width="2dp" />
+        android:layout_height="match_parent" />
 </FrameLayout>
