--- a/app/src/main/res/layout/create_content.xml
+++ b/app/src/main/res/layout/create_content.xml
@@ -17,10 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_48sdp"
         android:layout_gravity="bottom"
-        app:backgroundTint="#fbc2eb"
+        app:backgroundTint="@color/white"
+        app:labelVisibilityMode="auto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_bottom_navigation"
-        app:morphCornerRadius="@dimen/_128sdp"
-        app:morphItemRadius="@dimen/_30sdp"
-        app:morphVerticalOffset="8dp" />
+        app:morphCornerRadius="@dimen/_50sdp"
+        app:morphItemRadius="@dimen/_10sdp"
+        app:morphVerticalOffset="6dp" />
 </FrameLayout>
