--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.BlankFragment">
+    tools:context=".ui.fragment.Calligraphy">
 
-
-    <EditText
+    <com.clipay.texteditor.KnifeText
         android:id="@+id/edit_query"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,18 +17,41 @@
         android:lineSpacingExtra="@dimen/_10sdp"
         android:padding="@dimen/_16sdp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/white_300"
         android:textSize="@dimen/_20ssp"
+        app:bulletColor="@color/blue_500"
+        app:bulletGapWidth="@dimen/bullet_gap_width"
+        app:bulletRadius="@dimen/bullet_radius"
+        app:historyEnable="true"
+        app:historySize="99"
+        app:linkColor="@color/blue_500"
+        app:linkUnderline="true"
+        app:quoteCapWidth="@dimen/quote_gap_width"
+        app:quoteColor="@color/blue_500"
+        app:quoteStripeWidth="@dimen/quote_stripe_width"
         tools:text="@string/hello_blank_fragment" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/color_picker_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_36sdp"
+        android:layout_gravity="bottom|end"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginBottom="@dimen/_46sdp"
-        android:background="@drawable/recyclerview_color_picker_background"
+        android:layout_marginBottom="@dimen/_24sdp"
+        android:background="@drawable/recycler_view_side_background"
+        android:orientation="horizontal"
+        android:padding="@dimen/_3sdp"
+        tools:listitem="@layout/colors" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/text_editor_fun"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_36sdp"
+        android:layout_gravity="end"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:layout_marginBottom="@dimen/_96sdp"
+        android:background="@drawable/recycler_view_side_background"
         android:orientation="horizontal"
         android:padding="@dimen/_3sdp"
         tools:listitem="@layout/colors" />
