--- a/app/src/main/res/layout/main_page_cardview_video.xml
+++ b/app/src/main/res/layout/main_page_cardview_video.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="16dp">
 
-
         <ImageView
             android:id="@+id/image"
             android:layout_width="@dimen/_40sdp"
@@ -45,14 +44,49 @@
             android:textSize="@dimen/_11ssp"
             tools:text="9hr ago" />
 
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/inner_content"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_240sdp"
+            android:layout_height="@dimen/_260sdp"
             android:layout_below="@+id/image"
             android:layout_marginTop="@dimen/_18sdp"
             android:gravity="center"
+            app:auto_show="true"
+            app:resize_mode="fill"
+            app:use_artwork="true"
+            app:use_controller="false" />
+
+        <ImageView
+            android:id="@+id/inner_content_image"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_260sdp"
+            android:layout_below="@+id/image"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:gravity="center"
+            android:scaleType="centerCrop"
             android:textColor="@color/white_transparent" />
+
+        <ProgressBar
+            android:id="@+id/video_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_260sdp"
+            android:layout_below="@+id/image"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:progressDrawable="@color/white_300" />
+
+        <ImageView
+            android:id="@+id/exo_play_1"
+            style="@style/ExoMediaButton.Play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/image"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_135sdp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/description"
