--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,7 +25,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <clipay.com.clipay.test.AutoPlayVideoRecyclerView
+    <clipay.com.clipay.views.AutoPlayVideoRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,5 +46,18 @@
         app:borderWidth="0dp"
         app:layout_behavior="clipay.com.clipay.util.ScrollingFABBehavior"
         app:srcCompat="@drawable/ic_add_white_24dp" />
+
+    <FrameLayout
+        android:id="@+id/bigPhotoFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#66000000"
+        android:visibility="gone">
+
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/zoomed_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
