--- a/EditPhoto/app/src/main/res/layout/fragment_contrast.xml
+++ b/EditPhoto/app/src/main/res/layout/fragment_contrast.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/controller">
 
-        <ContrastView
+        <com.hoanganhtuan95ptit.editphoto.contrast.ContrastView
             android:id="@+id/contrastView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
