--- a/EditPhoto/app/src/main/res/layout/fragment_saturation.xml
+++ b/EditPhoto/app/src/main/res/layout/fragment_saturation.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/controller">
 
-        <SaturationView
+        <com.hoanganhtuan95ptit.editphoto.saturation.SaturationView
             android:id="@+id/saturationView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
