--- a/EditPhoto/app/src/main/res/layout/fragment_brightness.xml
+++ b/EditPhoto/app/src/main/res/layout/fragment_brightness.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootBrightness"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -36,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Brightness"
+                android:text="@string/brightness"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp" />
 
@@ -92,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Brightness"
+                android:text="@string/brightness"
                 android:textColor="@color/colorAccent"
                 android:textSize="15sp" />
 
@@ -100,7 +99,7 @@
                 android:id="@+id/ivCheck"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:padding="10dp"
                 android:src="@drawable/nav_check"
                 android:tint="@color/colorAccent" />
