--- a/EditPhoto/app/src/main/res/layout/fragment_crop.xml
+++ b/EditPhoto/app/src/main/res/layout/fragment_crop.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootCrop"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
