--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="color_name">#ED6565</color>
     <color name="color_red">#F44336</color>
     <color name="comment_action_text_color">#797979</color>
+    <color name="f5f5f5">#f5f5f5</color>
 
 </resources>
