--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,14 @@
         <item name="android:textColor">@color/comment_action_text_color</item>
     </style>
 
+    <style name="textview_follows">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@string/roboto_regular_medium</item>
+        <item name="android:layout_below">@+id/comment_text</item>
+        <item name="android:textColor">@color/white_300</item>
+    </style>
+
 </resources>
