--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,11 +18,11 @@
     <item android:title="@string/more">
         <menu>
             <item
-                android:id="@+id/nav_item_six"
+                android:id="@+id/nav_item_settings"
                 android:icon="@drawable/ic_settings_black_24dp"
                 android:title="@string/settings" />
             <item
-                android:id="@+id/nav_item_seven"
+                android:id="@+id/nav_item_help_feedback"
                 android:icon="@drawable/ic_favorite_black_24dp"
                 android:title="@string/help_feedback" />
             <item
